更新了LED提示方式（本版包含上板暂未测试）
同步英雄

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -60,7 +60,6 @@ compiling bullet_lift.c...
                         break;
 ..\ROBOT\APP\bullet_lift.c: 1 warning, 0 errors
 compiling take_bullet.c...
-compiling delay.c...
 compiling filter.c...
 ..\ROBOT\ALGO\filter.c(113): warning:  #1035-D: single-precision operand implicitly converted to double-precision
                 output_accel=((60*abs(a_rpm)*9.8f*19)/(13.24f*PI*0.1510f));
@@ -74,43 +73,24 @@ compiling pid.c...
 compiling mpu6050_it.c...
 compiling mpu6050_process.c...
 compiling mpu6050IIC.c...
-compiling misc.c...
-compiling stm32f4xx_adc.c...
-compiling stm32f4xx_can.c...
-compiling stm32f4xx_dma.c...
-compiling stm32f4xx_exti.c...
-compiling stm32f4xx_gpio.c...
-compiling stm32f4xx_i2c.c...
 compiling stm32f4xx_it.c...
-compiling stm32f4xx_iwdg.c...
-compiling stm32f4xx_rcc.c...
-compiling stm32f4xx_sdio.c...
-compiling stm32f4xx_spi.c...
-compiling stm32f4xx_syscfg.c...
-compiling stm32f4xx_tim.c...
-compiling stm32f4xx_usart.c...
-compiling stm32f4xx_wwdg.c...
-compiling system_stm32f4xx.c...
-assembling startup_stm32f4xx.s...
 compiling can1_analysis.c...
 compiling can2_analysis.c...
 compiling remote_analysis.c...
 compiling usart6_wifi_Debug_OSC.c...
 compiling viceboard_analysis.c...
-compiling dma_uart4.c...
-compiling imu_data_decode.c...
-compiling packet.c...
-compiling uart4.c...
 linking...
-Program Size: Code=24936 RO-data=424 RW-data=1528 ZI-data=2592  
-FromELF: creating hex file...
-".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 10 Warning(s).
+.\Objects\IFR_Engineering_Main_2018.axf: Error: L6218E: Undefined symbol t_error_record (referred from control.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\Objects\IFR_Engineering_Main_2018.axf" - 1 Error(s), 10 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\RTE
   D:\KEIL V514\ARM\PACK\Keil\STM32F4xx_DFP\2.11.0
 
 <h2>Collection of Component Files used:</h2>
+Target not created.
 </pre>
 </body>
 </html>
