--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,6 +26,10 @@ Project File Date:  04/30/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
+compiling take_bullet.c...
+linking...
+Program Size: Code=24464 RO-data=488 RW-data=1568 ZI-data=2624  
+FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
