增加了全局取弹状态，增加了不带对位的自动取弹，优化部分取弹参数，优化了标定参数
增加了全局取弹状态，增加了不带对位的自动取弹，优化部分取弹参数，优化了标定参数

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,11 +26,44 @@ Project File Date:  04/30/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
+compiling main.c...
+compiling bsp.c...
+compiling can1.c...
+compiling can2.c...
+compiling gpio.c...
+compiling heartbeat.c...
+compiling pwm.c...
+compiling usart1_remote.c...
+compiling usart3_viceboard.c...
+compiling usart6_wifi_Debug.c...
+compiling auto_lift.c...
+compiling chassis.c...
+compiling control.c...
+..\ROBOT\APP\control.c(160): warning:  #550-D: variable "State_Record" was set but never used
+        static WorkState_e State_Record=CHECK_STATE;    
+..\ROBOT\APP\control.c: 1 warning, 0 errors
+compiling gpioctrl.c...
+compiling protect.c...
+compiling bullet_lift.c...
+..\ROBOT\APP\bullet_lift.c(117): warning:  #111-D: statement is unreachable
+                        break;
+..\ROBOT\APP\bullet_lift.c: 1 warning, 0 errors
 compiling take_bullet.c...
+compiling filter.c...
+compiling pid.c...
+compiling mpu6050_it.c...
+compiling mpu6050_process.c...
+compiling mpu6050IIC.c...
+compiling stm32f4xx_it.c...
+compiling can1_analysis.c...
+compiling can2_analysis.c...
+compiling remote_analysis.c...
+compiling usart6_wifi_Debug_OSC.c...
+compiling viceboard_analysis.c...
 linking...
-Program Size: Code=24464 RO-data=488 RW-data=1568 ZI-data=2624  
+Program Size: Code=25292 RO-data=488 RW-data=1572 ZI-data=2628  
 FromELF: creating hex file...
-".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\RTE
