增加了半自动上岛，更新了下岛参数，日常更新其他部分
下一版本增加半自动等等一系列全局状态

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\IFR_Engineering_Main_2018.uvprojx
-Project File Date:  04/30/2018
+Project File Date:  05/07/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
@@ -39,7 +39,7 @@ compiling usart6_wifi_Debug.c...
 compiling auto_lift.c...
 compiling chassis.c...
 compiling control.c...
-..\ROBOT\APP\control.c(160): warning:  #550-D: variable "State_Record" was set but never used
+..\ROBOT\APP\control.c(165): warning:  #550-D: variable "State_Record" was set but never used
         static WorkState_e State_Record=CHECK_STATE;    
 ..\ROBOT\APP\control.c: 1 warning, 0 errors
 compiling gpioctrl.c...
@@ -49,6 +49,7 @@ compiling bullet_lift.c...
                         break;
 ..\ROBOT\APP\bullet_lift.c: 1 warning, 0 errors
 compiling take_bullet.c...
+compiling semi_automatic_landing.c...
 compiling filter.c...
 compiling pid.c...
 compiling mpu6050_it.c...
@@ -61,7 +62,7 @@ compiling remote_analysis.c...
 compiling usart6_wifi_Debug_OSC.c...
 compiling viceboard_analysis.c...
 linking...
-Program Size: Code=25292 RO-data=488 RW-data=1572 ZI-data=2628  
+Program Size: Code=25512 RO-data=488 RW-data=1576 ZI-data=2624  
 FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 2 Warning(s).
 
