--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,14 +26,11 @@ Project File Date:  05/07/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling bullet_lift.c...
-..\ROBOT\APP\bullet_lift.c(117): warning:  #111-D: statement is unreachable
-                        break;
-..\ROBOT\APP\bullet_lift.c: 1 warning, 0 errors
+compiling take_bullet.c...
 linking...
-Program Size: Code=26280 RO-data=488 RW-data=1596 ZI-data=2628  
+Program Size: Code=26596 RO-data=488 RW-data=1596 ZI-data=2628  
 FromELF: creating hex file...
-".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\RTE
