优化上岛速度，优化拖车逻辑
优化上岛速度，优化拖车逻辑

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,17 +26,12 @@ Project File Date:  05/10/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling control.c...
-..\ROBOT\APP\control.c(86): warning:  #550-D: variable "State_Record" was set but never used
-        static WorkState_e State_Record=CHECK_STATE;    
-..\ROBOT\APP\control.c(194): warning:  #550-D: variable "Switch_Right_Last" was set but never used
-        static u8 Switch_Right_Last=0;
-..\ROBOT\APP\control.c: 2 warnings, 0 errors
-compiling image_control.c...
+compiling auto_lift.c...
+compiling trailer.c...
 linking...
-Program Size: Code=28008 RO-data=488 RW-data=1620 ZI-data=2724  
+Program Size: Code=28124 RO-data=488 RW-data=1628 ZI-data=2724  
 FromELF: creating hex file...
-".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 2 Warning(s).
+".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\RTE
