完善模式摄像头切换及操作反向、修复下岛准备位没有重置的BUG，更新拖车、加入补弹。等等一系列优化，可作为战场版（参数待调）
完善模式摄像头切换及操作反向、修复下岛准备位没有重置的BUG，更新拖车、加入补弹。等等一系列优化，可作为战场版（参数待调）

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -22,13 +22,13 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\IFR_Engineering_Main_2018.uvprojx
-Project File Date:  05/10/2018
+Project File Date:  05/16/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling chassis.c...
+compiling take_bullet.c...
 linking...
-Program Size: Code=28188 RO-data=488 RW-data=1628 ZI-data=2724  
+Program Size: Code=29344 RO-data=496 RW-data=1624 ZI-data=2744  
 FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
