--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  05/16/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling take_bullet.c...
+compiling image_control.c...
 linking...
-Program Size: Code=29344 RO-data=496 RW-data=1624 ZI-data=2744  
+Program Size: Code=29532 RO-data=496 RW-data=1624 ZI-data=2744  
 FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
