增加键盘复位功能，增加键盘开关屏幕功能，增加智能爬坡升降功能，更新战场版ERROR_CHECK策略
增加键盘复位功能，增加键盘开关屏幕功能，增加智能爬坡升降功能，更新战场版ERROR_CHECK策略，更新部分键位控制。部分测试无毛病

--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -22,13 +22,13 @@ Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
 E:\2018-Robomaster\IFR-RM\2018热身赛前\IFR_Engineering_Main_YuXin\KEIL\IFR_Engineering_Main_2018.uvprojx
-Project File Date:  05/16/2018
+Project File Date:  05/19/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling take_bullet.c...
+compiling main.c...
 linking...
-Program Size: Code=29536 RO-data=496 RW-data=1624 ZI-data=2744  
+Program Size: Code=30712 RO-data=496 RW-data=1644 ZI-data=2740  
 FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
