--- a/KEIL/Objects/IFR_Engineering_Main_2018.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\IFR_Engineering_Main_2018.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\IFR_Engineering_Main_2018.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5050106: Last Updated: Sun May 20 03:31:27 2018
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5050106: Last Updated: Sun May 20 03:45:18 2018
 <BR><P>
 <H3>Maximum Stack Usage =        172 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -2011,10 +2011,11 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Control_Task
 </UL>
 
-<P><STRONG><a name="[b7]"></a>Work_State_Change_Gaming</STRONG> (Thumb, 406 bytes, Stack size 4 bytes, control.o(i.Work_State_Change_Gaming))
-<BR><BR>[Stack]<UL><LI>Max Depth = 4<LI>Call Chain = Work_State_Change_Gaming
+<P><STRONG><a name="[b7]"></a>Work_State_Change_Gaming</STRONG> (Thumb, 492 bytes, Stack size 8 bytes, control.o(i.Work_State_Change_Gaming))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Work_State_Change_Gaming
 </UL>
-<BR>[Calls]<UL><LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetWorkState
+<BR>[Calls]<UL><LI><a href="#[e4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;NVIC_SystemReset
+<LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetWorkState
 <LI><a href="#[7f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetWorkState
 </UL>
 <BR>[Called By]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Control_Task
@@ -2204,7 +2205,8 @@ Global Symbols
 Local Symbols
 </H3>
 <P><STRONG><a name="[e4]"></a>NVIC_SystemReset</STRONG> (Thumb, 30 bytes, Stack size 0 bytes, control.o(i.NVIC_SystemReset))
-<BR><BR>[Called By]<UL><LI><a href="#[ff]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_Calibration
+<BR><BR>[Called By]<UL><LI><a href="#[b7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Work_State_Change_Gaming
+<LI><a href="#[ff]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RC_Calibration
 <LI><a href="#[b5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KeyboardRetset
 </UL>
 
