--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,6 +26,10 @@ Project File Date:  05/19/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
+compiling chassis.c...
+linking...
+Program Size: Code=30840 RO-data=496 RW-data=1652 ZI-data=2740  
+FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
