--- a/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
+++ b/KEIL/Objects/IFR_Engineering_Main_2018.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  05/19/2018
 
 <h2>Output:</h2>
 Build target 'IFR_Engineering_Main_2018'
-compiling chassis.c...
+compiling auto_lift.c...
 linking...
-Program Size: Code=30840 RO-data=496 RW-data=1652 ZI-data=2740  
+Program Size: Code=30856 RO-data=496 RW-data=1652 ZI-data=2740  
 FromELF: creating hex file...
 ".\Objects\IFR_Engineering_Main_2018.axf" - 0 Error(s), 0 Warning(s).
 
